--- a/TodoApp.xcodeproj/xcshareddata/xcschemes/TodoApp.xcscheme
+++ b/TodoApp.xcodeproj/xcshareddata/xcschemes/TodoApp.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2FBCE01C23DCD78E00CBD73D"
-               BuildableName = "TodoApp.app"
+               BuildableName = "PackApp.app"
                BlueprintName = "TodoApp"
                ReferencedContainer = "container:TodoApp.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2FBCE01C23DCD78E00CBD73D"
-            BuildableName = "TodoApp.app"
+            BuildableName = "PackApp.app"
             BlueprintName = "TodoApp"
             ReferencedContainer = "container:TodoApp.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2FBCE01C23DCD78E00CBD73D"
-            BuildableName = "TodoApp.app"
+            BuildableName = "PackApp.app"
             BlueprintName = "TodoApp"
             ReferencedContainer = "container:TodoApp.xcodeproj">
          </BuildableReference>
